# uncertainty-estimation

./: .env.example  .gitignore  README.md  pyproject.toml
evaluation/: Epic6_GT.csv  UE.ipynb  UE_GPT20B.ipynb  calibration.ipynb  calibration_helpers.py  ensemble_config_threshold_0.335_gate_0.235_.json  ensemble_config_threshold_0.335_gate_0.235_gpt120b_judge.json  ue_gpt20b_support.py
