[project]
name = "legal-service"
version = "0.1.0"
description = "Legal risk assessment API for IntelliProcure AI"
requires-python = "==3.11.*"
dependencies = [
    "fastapi==0.115.5",
    "httpx==0.27.2",
    "openai>=1.0.0",
    "python-dotenv==1.0.1",
    "uvicorn[standard]==0.32.1",
]

[dependency-groups]
dev = [
    "ipywidgets==8.1.3",
    "openpyxl==3.1.5",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pyyaml==6.0.1",
]
